--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -222,117 +222,130 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:text="Product Details"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/pro_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="8dp"
-                android:text="Category: Phones and Accessories"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/pro_condition"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="4dp"
-                android:text="Condition: Good"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/pro_base_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="4dp"
-                android:text="Condition: Good"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/pro_bidsCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="4dp"
-                android:text="Total Bids: 37"
-                android:textColor="@color/black"
-                android:layout_marginBottom="8dp" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="12dp"
-                android:text="Product Description"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/pro_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="18dp"
-                android:layout_marginTop="8dp"
-                android:text="All new iphone 6 in very good conditon 6 monts used. With all in box accessories"
-                android:textColor="@color/black"
-                android:layout_marginBottom="8dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="12dp"
-                android:text="About Seller"
-                android:textSize="16sp" />
-
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="?android:attr/selectableItemBackground"
-                android:hapticFeedbackEnabled="true">
+                android:layout_height="match_parent">
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="20dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginBottom="12dp"
-                    app:cardElevation="4dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/pro_seller_image"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Product Details"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/pro_category"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Category: Phones and Accessories"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/pro_condition"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginTop="4dp"
+                        android:text="Condition: Good"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/pro_base_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginTop="4dp"
+                        android:text="Condition: Good"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/pro_bidsCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginTop="4dp"
+                        android:text="Total Bids: 37"
+                        android:textColor="@color/black"
+                        android:layout_marginBottom="8dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="12dp"
+                        android:text="Product Description"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/pro_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginRight="12dp"
+                        android:layout_marginTop="8dp"
+                        android:text="All new iphone 6 in very good conditon 6 monts used. With all in box accessories"
+                        android:textColor="@color/black"
+                        android:layout_marginBottom="8dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="18dp"
+                        android:text="About Seller"
+                        android:textSize="16sp" />
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/pras" />
-                </android.support.v7.widget.CardView>
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:layout_marginBottom="32dp">
 
-                <TextView
-                    android:id="@+id/pro_seller"
-                    android:layout_width="wrap_content"
-                    android:layout_marginRight="8dp"
-                    android:layout_height="wrap_content"
-                    android:text="PraSoon GosWami"
-                    android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="16sp"
-                    android:layout_gravity="center"
-                    android:textStyle="bold" />
+                        <android.support.v7.widget.CardView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            app:cardCornerRadius="20dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginBottom="12dp"
+                            app:cardElevation="4dp">
+
+                            <ImageView
+                                android:id="@+id/pro_seller_image"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/pras" />
+                        </android.support.v7.widget.CardView>
+
+                        <TextView
+                            android:id="@+id/pro_seller"
+                            android:layout_width="wrap_content"
+                            android:layout_marginRight="8dp"
+                            android:layout_height="wrap_content"
+                            android:text="PraSoon GosWami"
+                            android:textColor="@android:color/holo_blue_dark"
+                            android:textSize="16sp"
+                            android:layout_gravity="center"
+                            android:textStyle="bold" />
 
 
-            </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+            </ScrollView>
 
 
         </LinearLayout>
@@ -345,11 +358,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@drawable/background_bid_button"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="12dp"
-        android:layout_marginTop="8dp"
+        android:background="@drawable/background_bid_button"
         android:text="Place your bid" />
 
     <LinearLayout
