--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Apple iPhone 6"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"
                         android:layout_marginLeft="18dp" />
@@ -122,7 +122,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="₹62000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:textColor="@android:color/holo_blue_dark"
                         android:layout_marginTop="2dp"
@@ -150,7 +150,7 @@
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="12dp"
                 app:cardCornerRadius="20dp"
-                app:cardElevation="16dp">
+                app:cardElevation="8dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -207,11 +207,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your Bid : No bids found"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="12dp"
-                android:textSize="18sp"
-                android:textColor="@android:color/holo_red_dark"
-                android:textStyle="bold|italic"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
                 android:layout_gravity="center" />
 
             <View
