--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -19,19 +19,21 @@
             android:clipToPadding="false"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
-            app:stl_defaultTabTextColor="@color/colorAccent"
-            app:stl_defaultTabTextHorizontalPadding="18dp"
+
+            android:background="@android:color/darker_gray"
             app:stl_dividerColor="@android:color/transparent"
             app:stl_dividerThickness="0dp"
             app:stl_indicatorAlwaysInCenter="true"
-            app:stl_indicatorColor="@color/bb_darkBackgroundColor"
+            app:stl_defaultTabTextHorizontalPadding="28dp"
             app:stl_indicatorCornerRadius="18dp"
             app:stl_indicatorGravity="center"
             app:stl_indicatorInterpolation="smart"
             app:stl_indicatorThickness="36dp"
             app:stl_underlineColor="@android:color/transparent"
             app:stl_underlineThickness="0dp"
-            android:background="@color/colorPrimary"/>
+            app:stl_defaultTabTextSize="18sp"
+            app:stl_indicatorColor="@color/colorAccent"
+            app:stl_titleOffset="auto_center" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
