--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -14,6 +14,10 @@
             android:icon="@drawable/ic_transaction"
             android:title="My Transactions" />
         <item
+            android:id="@+id/nav_contactUs"
+            android:icon="@drawable/ic_contactus"
+            android:title="Contact Us" />
+        <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_share"
             android:title="Share App" />
